--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cy:run" : "cypress run"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -36,6 +37,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-persist": "^4.3.1",
     "@vitejs/plugin-react": "^4.6.0",
+    "cypress": "^14.5.3",
     "daisyui": "^5.0.46",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
